<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textMask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="-128dp"
        android:textSize="18sp"
        android:text="@string/choose_mask"
        android:hint="@string/hint_mask"/>

    <EditText
        android:id="@+id/editData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_data"
        android:inputType="phone"/>

</LinearLayout>