<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              android:gravity="center"
              android:orientation="vertical">

    <Button
        android:id="@+id/btnCustomMask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/custom_mask_button"/>

    <Button
        android:id="@+id/btnStaticMask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/static_mask_button"/>

    <Button
        android:id="@+id/btnSlotsBehaviour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slots_behaviour"/>

</LinearLayout>